vlib/v/parser/tests/anon_fn_return_type.out
vlib/v/parser/tests/anon_fn_return_type.vv:7:13: error: invalid return type `one` for anonymous function
    5 | ms := &Msg{}
    6 | 
    7 | fn (m &Msg) one() { 
      |             ~~~
    8 | }
