vlib/v/parser/tests/anon_fn_return_type.vv
struct Msg {
	name string
	text string
}
ms := &Msg{}

fn (m &Msg) one() { 
}
